# Telegram-Gpt-Fork

./: .env  .gitignore  README.md  bot.py  ds.py  pyproject.toml  requirements.txt  settings.py  util.py
resources/messages/: main.txt  questions.txt  results.txt
resources/prompts/: questions.txt  results.txt
